--- a/index.html
+++ b/index.html
@@ -532,9 +532,9 @@ https://web-tlias-amireux.oss-cn-hangzhou.aliyuncs.com/c54c492c-eb41-4d89-9ff3-c
 
                                     <div class="swiper-slide scaleimg swiper-slide-next" data-swiper-slide-index="2" style="width: 379px;">
                                         <a href="#" target="_self">
-<%--                                            阿里云OSS--%>
-                                            <div class="pic"><em class="tran300" style="background-image: url(
-https://web-tlias-amireux.oss-cn-hangzhou.aliyuncs.com/c54c492c-eb41-4d89-9ff3-c055194a4b8b.JPG);"></em></div>
+
+<!--                                             <div class="pic"><em class="tran300" style="background-image: url(
+https://web-tlias-amireux.oss-cn-hangzhou.aliyuncs.com/c54c492c-eb41-4d89-9ff3-c055194a4b8b.JPG);"></em></div> -->
                                             <h5 class="TXTovehid">泰裤辣</h5>
                                         </a>
                                     </div>
